# business-agent-loop

./: AGENTS.md  README.md  pyproject.toml
config/: ip_profile.json  project_config.json  search.json
docs/: DESIGN.md
runtime/: README.md
scripts/: run_agent.sh  run_vllm_server.sh  setup_gpt_oss_env.sh
src/business_agent_loop/: cli.py  config.py  models.py  state.py
src/business_agent_loop/agent/: loop.py
src/business_agent_loop/agent/policies/: mode_selection.py  stagnation.py
src/business_agent_loop/agent/prompts/: builder.py
src/business_agent_loop/config/: __init__.py  validation.py
src/business_agent_loop/models/: __init__.py
src/business_agent_loop/runtime/: __init__.py  ddg_search.py  harmony_client.py
src/business_agent_loop/storage/: state_store.py
tests/: test_agent.py  test_agent_mode_selection.py  test_agent_prompts.py  test_agent_stagnation.py  test_agent_step.py  test_config.py  test_harmony_client.py  test_state.py
tests/runtime/: test_ddg_search.py
