[project]
name = "business-agent-loop"
version = "0.1.0"
description = "Business agent loop orchestrator"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo_search>=5.3.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
